Update pikaur config

--- a/pikaur/.config/pikaur.conf
+++ b/pikaur/.config/pikaur.conf
@@ -3,6 +3,7 @@ alwaysshowpkgorigin = yes
 develpkgsexpiration = -1
 upgradesorting = versiondiff
 showdownloadsize = yes
+ignoreoutofdateaurupgrades = no
 
 [build]
 keepbuilddir = no
@@ -10,10 +11,10 @@ keepdevbuilddir = yes
 skipfailedbuild = no
 noedit = no
 nodiff = no
-# disable systemd dynamic users until #340 is fixed
 alwaysusedynamicusers = no
 donteditbydefault = no
 gitdiffargs = --ignore-space-change,--ignore-all-space
+keepbuilddeps = no
 
 [colors]
 version = 10
