--- a/i3status-rust/.config/i3status-rust/config.toml
+++ b/i3status-rust/.config/i3status-rust/config.toml
@@ -1,14 +1,15 @@
 [icons]
 # Choices: none, awesome, material
-name = "awesome"
+name = "none"
 
 [theme]
 # Choices: plain, solarized-dark, slick
-name = "solarized-dark"
+name = "slick"
 [theme.overrides]
-separator = "<span font='DejaVu Mono Sans 12'></span>"
-#separator_fg = "#ffffff"
+separator = ""
 separator_bg = "auto"
+idle_bg = "#000000"
+alternating_tint_bg = "#444444"
 
 [[block]]
 block = "pacman"
@@ -28,7 +29,6 @@ on_click = "true"
 [[block]]
 block = "music"
 player = "mpd"
-buttons = ["play", "prev", "next"]
 marquee_speed = 0.8
 marquee_interval = 3
 max_width = 25
@@ -68,7 +68,6 @@ block = "load"
 interval = 1
 format = "{1m}"
 
-
 [[block]]
 block = "custom"
 command = "fish --command='check_vpn --barmode'"
@@ -79,17 +78,14 @@ block = "net"
 device = "enp3s0"
 
 #[[block]]
-#block = "custom"
-#command = "fish --command='echo $SOUND_SOURCE'"
-#interval = 5
-#on_click = "fish --command='switchaudio'"
-
-#[[block]]
 #block = "custom_dbus"
 #name = "SoundDevice"
 
+# if have issues then disable this block until it has been cleared of unwraps
 [[block]]
 block = "sound"
+driver = "pulseaudio"
+on_click = "swaymsg exec 'pavucontrol'"
 
 [[block]]
 block = "custom"
@@ -101,13 +97,8 @@ block = "custom"
 command = "fish --command='check_xclients --barmode'"
 interval = 5
 
-[[block]]
-block = "ibus"
-
-#[[block]]
-#block = "weather"
-#format = "{temp}° {wind}m/s {direction}"
-#service = { name = "openweathermap", api_key = "3bddca882b9b2c3e463785fb9f0df35d", city_id = "1862627", units = "metric" }
+#$[[block]]
+#block = "ibus"
 
 [[block]]
 block = "custom"
