--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -246,8 +246,10 @@ bindsym $mod+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     font pango:DejaVu Sans Mono, FontAwesome 10
+    height 18
     position top
     status_command i3status-rs
+    status_padding 0
     colors {
         separator #666666
         background #222222
