--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -39,12 +39,13 @@ output * bg #000000 solid_color
 
 ### Idle configuration
 # To make sure swayidle waits for swaylock to lock the screen before it releases the inhibition lock,
-# the -w options is used in swayidle, and -f in swaylock (I set `daemonize` in the swaylock config file).
+# swayidle's -w (wait) option and swaylock's -f/--daemonize options are used.
 exec swayidle -w \
-         timeout 300 'swaylock' \
+         timeout 300 'swaylock --daemonize' \
+         idlehint 300 \
          timeout 600 'swaymsg "output * dpms off"' \
               resume 'swaymsg "output * dpms on"' \
-         before-sleep 'swaylock'
+         before-sleep 'swaylock --daemonize' \
 
 ### Input configuration
 input * xkb_numlock enabled
