Allow pango formatted title bars

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -241,6 +241,9 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+# font for title bars
+font pango:DejaVu Sans Mono, FontAwesome 10
+
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
 # ┃ Status bar
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
