pikaur: new config added by update

--- a/pikaur/.config/pikaur.conf
+++ b/pikaur/.config/pikaur.conf
@@ -33,6 +33,7 @@ debug = no
 sudoloopinterval = 1
 aurhost = aur.archlinux.org
 newsurl = https://www.archlinux.org/feeds/news/
+privilegeescalationtool = sudo
 
 [network]
 socks5proxy = 
