--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -4,6 +4,8 @@
   signingkey = 6CDCD9911FC611E05E9B4A6CEE220FCAA09AF23D
 [commit]
   gpgsign = true
+[push]
+  default = current
 [core]
   autocrlf = input
   pager = delta --dark
