mpv: update config

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,7 +1,7 @@
 stop-screensaver
-
 gpu-context=wayland
 vo=gpu
+hwdev=vaapi
 
 # gpu-hq defaults to spline36 scaling filter for mid quality and speed.
 # For best quality video output, the manual states that if your hardware can run it,
