--- a/pikaur/.config/pikaur.conf
+++ b/pikaur/.config/pikaur.conf
@@ -9,11 +9,7 @@ ignoreoutofdateaurupgrades = no
 keepbuilddir = no
 keepdevbuilddir = yes
 skipfailedbuild = no
-noedit = no
-nodiff = no
 alwaysusedynamicusers = no
-donteditbydefault = no
-gitdiffargs = --ignore-space-change,--ignore-all-space
 keepbuilddeps = no
 
 [colors]
@@ -23,7 +19,6 @@ versiondiffnew = 9
 
 [ui]
 requireenterconfirm = yes
-diffpager = auto
 printcommands = no
 reversesearchsorting = no
 
@@ -31,10 +26,17 @@ reversesearchsorting = no
 pacmanpath = pacman
 debug = no
 sudoloopinterval = 1
-aurhost = aur.archlinux.org
-newsurl = https://www.archlinux.org/feeds/news/
 privilegeescalationtool = sudo
 
 [network]
 socks5proxy = 
+aururl = https://aur.archlinux.org
+newsurl = https://www.archlinux.org/feeds/news/
+
+[review]
+noedit = no
+donteditbydefault = no
+nodiff = no
+gitdiffargs = --ignore-space-change,--ignore-all-space
+diffpager = auto
 
