i3status-rust: disable `custom-dbus` block
Uncomment when this is merged: https://github.com/greshake/i3status-rust/pull/426

--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -75,9 +75,9 @@ interval = 60
 block = "net"
 device = "enp3s0"
 
-[[block]]
-block = "custom_dbus"
-name = "SoundDevice"
+#[[block]]
+#block = "custom_dbus"
+#name = "SoundDevice"
 
 # if have issues then disable this block until it has been cleared of unwraps
 [[block]]
