sway: add new window selector script

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -304,6 +304,7 @@ for_window [shell=".*"] title_format "%title :: %shell"
 bindsym $mod+e exec $term -e ranger
 
 bindsym $mod+l exec fish --command=sway_lock
+bindsym $mod+F1 exec fish --command=sway_selector
 
 bindsym Print exec fish --command=screenshot
 bindsym $mod+Print exec swaygrab $SCREENSHOT_DIR/temp.jpg
