--- a/pikaur/.config/pikaur.conf
+++ b/pikaur/.config/pikaur.conf
@@ -39,4 +39,5 @@ donteditbydefault = no
 nodiff = no
 gitdiffargs = --ignore-space-change,--ignore-all-space
 diffpager = auto
+hidedifffiles = .SRCINFO
 
