i3status-rust: add reminder
TODO
Sometimes after exiting `sway` there are a bunch of errors from panicked threads in stderr.
These are coming from i3status-rs, but cannot tell which block they are coming from.
After this PR is merged it will be trivial to track down the problem block:
https://github.com/greshake/i3status-rust/pull/533

--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -80,6 +80,7 @@ device = "enp3s0"
 #name = "SoundDevice"
 
 # if have issues then disable this block until it has been cleared of unwraps
+# once https://github.com/greshake/i3status-rust/pull/533 is merged this should be easier to monitor
 [[block]]
 block = "sound"
 driver = "pulseaudio"
