mpd: allow non-local apps to access mpd

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -68,7 +68,8 @@ sticker_file			"~/.config/mpd/sticker.sql"
 # should be paid if this is assigned to anything other then the default, any.
 # This setting can deny access to control of the daemon. Not effective if
 # systemd socket activiation is in use.
-bind_to_address "127.0.0.1"
+#bind_to_address "127.0.0.1"
+bind_to_address "0.0.0.0"
 
 # For network
 #bind_to_address		"any"
