--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -1,22 +1,31 @@
 [icons]
-name = "none"
+name = "awesome5"
+[icons.overrides]
+net_wired = ""
+volume_empty = " "
+volume_half = " "
+volume_full = " "
 
 [theme]
 name = "slick"
 [theme.overrides]
 separator = ""
-separator_bg = "auto"
-idle_bg = "#000000"
-alternating_tint_bg = "#444444"
+#separator_bg = "auto"
+#idle_bg = "#000000"
+#alternating_tint_bg = "#444444"
 
 [[block]]
 block = "pacman"
-interval = 600
+format = "{pacman}/{aur}"
+critical_updates_regex = "(linux |linux-lts|linux-zen)"
+aur_command = "pikaur --query --sysupgrade --aur 2>/dev/null"
+# AUR only allows 4000 requests every 24 hours
+interval = 1800
 
-# Re-enable this when https://github.com/greshake/i3status-rust/pull/515 is merged
+# this apparently blocks the bar
 #[[block]]
 #block = "custom"
-#command = "fish --command='check_aur_pending --barmode'"
+#on_click = "alacritty -e neomutt"
 
 [[block]]
 block = "custom"
@@ -27,6 +36,8 @@ on_click = "true"
 [[block]]
 block = "music"
 player = "mpd"
+buttons = ["play"]
+marquee = false
 marquee_speed = 0.8
 marquee_interval = 3
 max_width = 25
@@ -42,16 +53,6 @@ warning = 20.0
 alert = 10.0
 
 [[block]]
-block = "disk_space"
-path = "/mnt/general"
-alias = "gen"
-info_type = "available"
-unit = "GB"
-interval = 20
-warning = 20.0
-alert = 10.0
-
-[[block]]
 block = "memory"
 display_type = "memory"
 format_mem = "{Mug}GB({Mupi}%)"
@@ -59,7 +60,8 @@ format_swap = "{SUp}%"
 
 [[block]]
 block = "cpu"
-interval = 1
+format = "{utilization}"
+per_core = true
 
 [[block]]
 block = "load"
@@ -74,17 +76,24 @@ interval = 60
 [[block]]
 block = "net"
 device = "enp3s0"
+speed_min_unit = "M"
+speed_digits = 2
+#bitrate = true
 
-#[[block]]
-#block = "custom_dbus"
-#name = "SoundDevice"
+[[block]]
+block = "custom_dbus"
+name = "SoundDevice"
 
 # if have issues then disable this block until it has been cleared of unwraps
 # once https://github.com/greshake/i3status-rust/pull/533 is merged this should be easier to monitor
 [[block]]
 block = "sound"
 driver = "pulseaudio"
+step_width = 3
 on_click = "swaymsg exec 'pavucontrol'"
+#this crashes swaybar:
+#on_click = "pavucontrol 2>/dev/null"
+format = "{volume}%"
 
 [[block]]
 block = "custom"
@@ -108,9 +117,9 @@ command = "fish --command=phone_battery_status"
 interval = 60
 
 [[block]]
-block = "custom"
-command = "fish --command='tv_status --barmode'"
-interval = 60
+[[block]]
+block = "github"
+format = "{total} ({author}|{comment}|{mention}|{review_requested})"
 
 [[block]]
 block = "time"
