--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,8 +21,8 @@ hide_window_decorations yes
 # ┏━━━━━━━━━━━━━━━━━━━━━━━
 # ┃ Behaviour
 # ┗━━━━━━━━━━━━━━━━━━━━━━━
-map ctrl+shift+c copy_to_clipboard
-map ctrl+shift+v paste_from_clipboard
+#map ctrl+shift+c copy_to_clipboard
+#map ctrl+shift+v paste_from_clipboard
 map ctrl+shift+plus change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 
