--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,11 +21,11 @@ output * bg #000000 solid_color
 # To make sure swayidle waits for swaylock to lock the screen before it releases the inhibition lock,
 # swayidle's -w (wait) option and swaylock's -f/--daemonize options are used.
 exec swayidle -w \
-         timeout 300 'fish --command sway_lock' \
+         timeout 300 'fish --command="sway_lock --debug 2>>/tmp/swaylock_timeout300.log"' \
          idlehint 300 \
          timeout 600 'swaymsg "output * dpms off"' \
               resume 'swaymsg "output * dpms on"' \
-         before-sleep 'fish --command sway_lock' \
+         before-sleep 'fish --command="sway_lock --debug 2>>/tmp/swaylock_beforesleep.log"' \
 
 ### Key bindings
 #
@@ -261,10 +261,10 @@ for_window [shell=".*"] title_format "%title :: %shell"
 bindsym $mod+e exec $term -e ranger
 
 bindsym Print exec fish --command=screenshot
-bindsym $mod+l exec fish --command=sway_lock
 bindsym $mod+F1 exec fish --command=sway_selector
 bindsym $mod+F3 exec fish --command=sway_preview_outputs
 bindsym $mod+F9 exec fish --command=sway_move_all_workspaces
+bindsym $mod+l exec fish --command="sway_lock --debug 2>>/tmp/swaylock_manual.log"
 bindsym --locked $mod+F1 exec fish --command="sway_setup_desktop --toggle"
 bindsym --locked $mod+F5 exec swaymsg output "*" dpms on
 bindsym --locked $mod+F7 exec fish --command="switchaudio --menu"
