--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -152,8 +152,8 @@ exec swayidle -w \
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
+    #bindsym $mod+s layout stacking
+    #bindsym $mod+w layout tabbed
     bindsym $mod+Ctrl+e layout toggle split
 
     # Make the current focus fullscreen
