--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -264,13 +264,14 @@ for_window [shell=".*"] title_format "%title :: %shell"
 bindsym $mod+e exec $term -e ranger
 
 bindsym Print exec fish --command=screenshot
-bindsym $mod+F1 exec fish --command=sway_selector
-bindsym $mod+F3 exec fish --command=sway_preview_outputs
-bindsym $mod+F9 exec fish --command=sway_move_all_workspaces
 bindsym $mod+l exec fish --command="sway_lock --debug 2>>/tmp/swaylock_manual.log"
 bindsym --locked $mod+F1 exec fish --command="sway_setup_desktop --toggle"
+bindsym $mod+F2 exec fish --command=sway_selector
+bindsym $mod+F3 exec fish --command=sway_preview_outputs
 bindsym --locked $mod+F5 exec swaymsg output "*" dpms on
-bindsym --locked $mod+F7 exec fish --command="switchaudio --menu"
+bindsym $mod+F9 exec fish --command=sway_move_all_workspaces
+bindsym $mod+F7 exec fish --command="switchaudio --menu"
+bindsym --locked $mod+F7 exec fish --command=switchaudio
 bindsym --locked $mod+F8 exec fish --command=tv_toggle
 
 # Media keys
