gpg: update config with ssh support

--- a/gnupg/.config/gnupg/gpg-agent.conf
+++ b/gnupg/.config/gnupg/gpg-agent.conf
@@ -1,4 +1,6 @@
 pinentry-program /usr/bin/pinentry-gnome3
-
+enable-ssh-support
 max-cache-ttl 3600
 default-cache-ttl 3600
+default-cache-ttl-ssh 3600
+max-cache-ttl-ssh 3600
