--- a/sway-laptop/.config/sway/config
+++ b/sway-laptop/.config/sway/config
@@ -1,76 +1,38 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
+# Customised config for sway based on /etc/sway/config
 #
 # Read `man 5 sway` for a complete reference.
 
 ### Variables
-#
-# Logo key. Use Mod1 for Alt.
+# WinKey = Mod4, Alt=Mod1
 set $mod Mod4
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
-set $right l
-# Your preferred terminal emulator
-set $term alacritty
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-set $menu dmenu_path | dmenu | xargs swaymsg exec --
 
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
+### Input/output/seat configuration
+# Moved to shell script to in order to have more functionality
+exec fish --command "sway_setup_desktop --mode upstairs"
+# this can only be used in config file:
+input * xkb_numlock enabled
+
+# Wallpaper
+output * bg #000000 solid_color
+#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+#exec glpaper "HDMI-A-1" $upstairs_monitorL $XDG_CONFIG_HOME/glpaper/fragments/matrix.frag
 
 ### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' \
-#               resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
+# To make sure swayidle waits for swaylock to lock the screen before it releases the inhibition lock,
+# swayidle's -w (wait) option and swaylock's -f/--daemonize options are used.
+exec swayidle -w \
+         timeout 300 'fish --command="sway_lock --debug 2>>/tmp/swaylock_timeout300.log"' \
+         idlehint 300 \
+         timeout 600 'swaymsg "output * dpms off"' \
+              resume 'swaymsg "output * dpms on"' \
+         before-sleep 'fish --command="sway_lock --debug 2>>/tmp/swaylock_beforesleep.log"' \
 
 ### Key bindings
 #
 # Basics:
 #
-    # Start a terminal
-    bindsym $mod+Return exec $term
-
-    # Kill focused window
-    bindsym $mod+Shift+q kill
-
-    # Start your launcher
-    bindsym $mod+d exec $menu
+    # kill focused window
+    bindsym $mod+q kill
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -79,31 +41,67 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # mouse button for dragging.
     floating_modifier $mod normal
 
-    # Reload the configuration file
+    # reload the configuration file
     bindsym $mod+Shift+c reload
 
-    # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+    # exit sway (logs you out of your Wayland session)
+    #bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+    # use swaynagmode instead of the above so can exit using keyboard
+    set {
+      $nag         exec swaynagmode
+      $nag_exit    $nag --exit
+      $nag_confirm $nag --confirm
+      $nag_select  $nag --select
+    }
+    mode "nag" {
+      bindsym {
+        Ctrl+d    mode "default"
+
+        Ctrl+c    $nag_exit
+        q         $nag_exit
+        Escape    $nag_exit
+
+        Return    $nag_confirm
+
+        Tab       $nag_select prev
+        Shift+Tab $nag_select next
+
+        Left      $nag_select next
+        Right     $nag_select prev
+
+        Up        $nag_select next
+        Down      $nag_select prev
+      }
+    }
+    bindsym $mod+Shift+e $nag -t "warning" -m "Exit Sway?" -b "Exit" "swaymsg exit" -b "Reload" "swaymsg reload"
+    # -R is recommended for swaynag_command so that, upon a syntax error in your sway config, the
+    # 'Reload Sway' option will be initially selected instead of the 'Exit Sway' option
+    swaynag_command $nag -R
+
 #
 # Moving around:
 #
     # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
+    set $left h
+    set $down j
+    set $up k
+    set $right l
+    #bindsym $mod+$left focus left
+    #bindsym $mod+$down focus down
+    #bindsym $mod+$up focus up
+    #bindsym $mod+$right focus right
+    # or use $mod+[up|down|left|right]
     bindsym $mod+Left focus left
     bindsym $mod+Down focus down
     bindsym $mod+Up focus up
     bindsym $mod+Right focus right
 
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
+    # _move_ the focused window with the same, but add Shift
+    #bindsym $mod+Shift+$left move left
+    #bindsym $mod+Shift+$down move down
+    #bindsym $mod+Shift+$up move up
+    #bindsym $mod+Shift+$right move right
+    # ditto, with arrow keys
     bindsym $mod+Shift+Left move left
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
@@ -111,30 +109,39 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Workspaces:
 #
-    # Switch to workspace
-    bindsym $mod+1 workspace 1
-    bindsym $mod+2 workspace 2
-    bindsym $mod+3 workspace 3
-    bindsym $mod+4 workspace 4
-    bindsym $mod+5 workspace 5
-    bindsym $mod+6 workspace 6
-    bindsym $mod+7 workspace 7
-    bindsym $mod+8 workspace 8
-    bindsym $mod+9 workspace 9
-    bindsym $mod+0 workspace 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace 1
-    bindsym $mod+Shift+2 move container to workspace 2
-    bindsym $mod+Shift+3 move container to workspace 3
-    bindsym $mod+Shift+4 move container to workspace 4
-    bindsym $mod+Shift+5 move container to workspace 5
-    bindsym $mod+Shift+6 move container to workspace 6
-    bindsym $mod+Shift+7 move container to workspace 7
-    bindsym $mod+Shift+8 move container to workspace 8
-    bindsym $mod+Shift+9 move container to workspace 9
-    bindsym $mod+Shift+0 move container to workspace 10
+    # switch to workspace
+    bindsym $mod+1 workspace number 1
+    bindsym $mod+2 workspace number 2
+    bindsym $mod+3 workspace number 3
+    bindsym $mod+4 workspace number 4
+    bindsym $mod+5 workspace number 5
+    bindsym $mod+6 workspace number 6
+    bindsym $mod+7 workspace number 7
+    bindsym $mod+8 workspace number 8
+    bindsym $mod+9 workspace number 9
+    bindsym $mod+0 workspace number 10
+    # move focused container to workspace
+    bindsym $mod+Shift+1 move container to workspace number 1
+    bindsym $mod+Shift+2 move container to workspace number 2
+    bindsym $mod+Shift+3 move container to workspace number 3
+    bindsym $mod+Shift+4 move container to workspace number 4
+    bindsym $mod+Shift+5 move container to workspace number 5
+    bindsym $mod+Shift+6 move container to workspace number 6
+    bindsym $mod+Shift+7 move container to workspace number 7
+    bindsym $mod+Shift+8 move container to workspace number 8
+    bindsym $mod+Shift+9 move container to workspace number 9
+    bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+
+    # alt-tab like behaviour
+    bindsym $mod+tab workspace next_on_output 
+    bindsym $mod+Shift+tab workspace prev_on_output 
+
+    # Rename
+    bindsym $mod+Shift+equal exec $$prompt "New workspace name (retain number):" | xargs -I {} bash -c "swaymsg 'rename workspace to \"$(~/.local/bin/sway-get-workspace prefix){}\"'"
+    bindsym $mod+Control+equal exec $$prompt "New workspace name:" | xargs -I {} swaymsg 'rename workspace to "{}"'
+
 #
 # Layout stuff:
 #
@@ -145,9 +152,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+    #bindsym $mod+s layout stacking
+    #bindsym $mod+w layout tabbed
+    bindsym $mod+Ctrl+e layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
@@ -158,7 +165,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # Swap focus between the tiling area and the floating area
     bindsym $mod+space focus mode_toggle
 
-    # Move focus to the parent container
+    # move focus to the parent container
     bindsym $mod+a focus parent
 #
 # Scratchpad:
@@ -185,34 +192,154 @@ mode "resize" {
     bindsym $up resize shrink height 10px
     bindsym $right resize grow width 10px
 
-    # Ditto, with arrow keys
+    # ditto, with arrow keys
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
 
-    # Return to default mode
+    # return to default mode
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
 
-#
-# Status Bar:
-#
+# font for title bars
+# FontAwesome 4.7
+#font pango:DejaVu Sans Mono, FontAwesome 10
+# FontAwesome 5
+font pango:DejaVu Sans Mono, FontAwesome5Free 10, FontAwesome5Brands 10
+
+# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
+# ┃ Status bar
+# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 # Read `man 5 sway-bar` for more information about this section.
 bar {
+    font pango:DejaVu Sans Mono, FontAwesome 10
+    height 18
     position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
-
+    status_command i3status-rs
+    #status_command RUST_BACKTRACE=1 i3status-rs $XDG_CONFIG_HOME/i3status-rust/config.tomldev 2> /tmp/i3statusrs.log
+    status_padding 0
     colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
+        separator #666666
+        background #222222
+        statusline #dddddd
+        focused_workspace #0088CC #0088CC #ffffff
+        active_workspace #333333 #333333 #ffffff
+        inactive_workspace #333333 #333333 #888888
+        urgent_workspace #2f343a #900000 #ffffff
     }
 }
 
+
+# Application hotkeys
+# ━━━━━━━━━━━━━━━━━━━━━━━━
+# NOTE: exec --no-startup-id is not supported/required in sway
+
+set $term kitty
+bindsym $mod+Return exec $term
+
+# Note: it's recommended that you pass the final command to sway so that it can note the workspace the command was run on
+# so when the child gets around to opening the window sway can place it on the original workspace 
+# (eg. if you launch something then immediately switch to another workspace before the window appears).
+bindsym $mod+d exec fish --command=sway_menu | xargs swaymsg exec --
+
+set $_menu bemenu --fn "Monospace 12" --hf "#2B83A6" --tf "#2B83A6" --prompt
+set $prompt echo | $_menu
+
+bindsym $mod+Shift+g exec notify-send "Starting Chrome..." --expire-time=1500; exec google-chrome-stable
+bindsym $mod+g exec notify-send "Starting Firefox..." --expire-time=1500; exec env GDK_BACKEND=wayland firefox-nightly
+#assign [class="Google-chrome"] $workspace01
+for_window [class="Google-chrome"] border none
+for_window [class="MozillaWindowClass"] border none
+for_window [app_id="firefox"] border none
+
+bindsym $mod+k exec kodi
+for_window [class="Kodi"] border none
+
+for_window [class="Screenruler"] border none
+for_window [shell=".*"] title_format "%title :: %shell"
+
+bindsym $mod+e exec $term -e ranger
+
+bindsym Print exec fish --command=screenshot
+bindsym $mod+l exec fish --command="sway_lock --debug 2>>/tmp/swaylock_manual.log"
+bindsym --locked $mod+F1 exec fish --command="sway_setup_desktop --toggle"
+bindsym $mod+F2 exec fish --command=sway_selector
+bindsym $mod+F3 exec fish --command=sway_preview_outputs
+bindsym --locked $mod+F5 exec swaymsg output "*" dpms on
+bindsym $mod+F9 exec fish --command=sway_move_all_workspaces
+bindsym $mod+F7 exec fish --command="switchaudio --menu"
+bindsym --locked $mod+F7 exec fish --command=switchaudio
+bindsym --locked $mod+F8 exec fish --command=tv_toggle
+
+# Media keys
+bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +2% && pamixer --get-volume > $SWAYSOCK.wob
+bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2% && pamixer --get-volume > $SWAYSOCK.wob
+bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym --locked XF86AudioPlay exec playerctl play-pause
+bindsym --locked XF86AudioNext exec playerctl next
+bindsym --locked XF86AudioPrev exec playerctl previous
+bindsym --locked XF86AudioStop exec playerctl stop
+bindsym Shift+XF86AudioLowerVolume exec playerctl position 3+
+bindsym Shift+XF86AudioRaiseVolume exec playerctl position 3-
+
+# Japanese IME
+bindsym $mod+Shift+a exec fish --command=ibus-toggle
+
+bindsym $mod+Shift+r exec kitty --name=launcher -e "fish --command 'complete --do-complete | sort -u | fzf | xargs -r swaymsg -t command exec'"
+for_window [app_id="^launcher$"] floating enable, border none
+
+bindsym $mod+grave exec fish --command=new_workspace
+bindsym $mod+Shift+grave exec fish --command="new_workspace --move-focused"
+
+# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
+# ┃ Other config files
+# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 include /etc/sway/config.d/*
+#include ~/.config/sway/`hostname`/*
+
+# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓	
+# ┃ Autostart
+# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
+exec systemctl --user start mako.service
+exec systemctl --user start pscircle.service
+
+#exec systemctl --user start ibus.service
+# Note: change to exec if not using --replace flag
+exec_always ibus-daemon --xim --replace --daemonize
+
+exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob
+
+#exec_always flashfocus
+
+exec ~/.local/bin/i3statusrs_dbus_server SoundDevice
+exec autotiling 2& > /tmp/autotiling.log
+
+#AmmCon
+#exec google-chrome-stable --user-data-dir=$XDG_CONFIG_HOME/ammcon-chrome --app=$AMMCON_URL -class=ammcon
+#assign [class="ammcon"] $workspace02
+#for_window [class="ammcon"] border none
+
+# Enable polkit auth for GUI apps
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
+#open security camera streams
+#exec mpv --title="washitsu" rtsp://10.9.8.135:7447/5a9e6fc05e0e9fb13861fc06_0 --mute=yes --quiet
+#assign [title="washitsu"] 2
+
+for_window [app_id="mpv"] inhibit_idle fullscreen
+for_window [title=".*YouTube.*"] inhibit idle fullscreen
+for_window [app_id="pavucontrol"] floating enable
+
+# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓	
+# ┃ Theming
+# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
+# For X apps using XSETTINGS:
+# exec /usr/bin/xsettingsd
+# For GTK applications, import GTK2/3 settings:
+# https://github.com/swaywm/sway/wiki/GTK-3-settings-on-Wayland
+exec_always fish --command=import-gsettings
+# For all applications except GTK:
+seat seat0 xcursor_theme ComixCursors-Slim-Blue
