--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -45,12 +45,11 @@ max_width = 25
 [[block]]
 block = "disk_space"
 path = "/"
-alias = "/"
 info_type = "available"
 unit = "GB"
-interval = 20
-warning = 20.0
-alert = 10.0
+interval = 60
+warning = 5.0
+alert = 2.0
 
 [[block]]
 block = "memory"
@@ -80,10 +79,6 @@ speed_min_unit = "M"
 speed_digits = 2
 #bitrate = true
 
-[[block]]
-block = "custom_dbus"
-name = "SoundDevice"
-
 # if have issues then disable this block until it has been cleared of unwraps
 # once https://github.com/greshake/i3status-rust/pull/533 is merged this should be easier to monitor
 [[block]]
@@ -93,7 +88,10 @@ step_width = 3
 on_click = "swaymsg exec 'pavucontrol'"
 #this crashes swaybar:
 #on_click = "pavucontrol 2>/dev/null"
-format = "{volume}%"
+format = "{output_name} {volume}"
+[block.mappings]
+"alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "🔈"
+"alsa_output.pci-0000_00_1b.0.analog-stereo" = "🎧"
 
 [[block]]
 block = "custom"
