kitty: make scrolling in terminal more bearable

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -26,6 +26,9 @@ hide_window_decorations yes
 map ctrl+shift+plus change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 
+# speed up mouse scroll
+touch_scroll_multiplier 6.0
+
 # kitty keeps freezing in sway...
 sync_to_monitor yes
 
