i3status-rs: add focused_window block for laptop

--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -99,6 +99,9 @@ command = "fish --command='check_xclients --barmode'"
 interval = 5
 
 [[block]]
+block = "focused_window"
+
+[[block]]
 block = "ibus"
 [block.mappings]
 "mozc-jp" = "JP"
