--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -1,7 +1,7 @@
 [icons]
 name = "awesome5"
 [icons.overrides]
-net_wired = ""
+#net_wired = ""
 volume_empty = " "
 volume_half = " "
 volume_full = " "
