--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -85,7 +85,7 @@ on_click = "swaymsg exec 'pavucontrol'"
 #on_click = "pavucontrol 2>/dev/null"
 format = "{output_name} {volume}%"
 [block.mappings]
-"alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "🔈"
+"alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = ""
 "alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
 
 [[block]]
