--- a/i3status-rs/.config/i3status-rust/config-laptop.toml
+++ b/i3status-rs/.config/i3status-rust/config-laptop.toml
@@ -1,7 +1,6 @@
 [icons]
 name = "awesome5"
 [icons.overrides]
-net_wired = ""
 volume_empty = " "
 volume_half = " "
 volume_full = " "
@@ -10,32 +9,14 @@ volume_full = " "
 name = "slick"
 [theme.overrides]
 separator = ""
-separator_bg = "auto"
-#idle_bg = "#000000"
-#alternating_tint_bg = "#444444"
 
 [[block]]
 block = "pacman"
 format = "{pacman}/{aur}"
-critical_updates_regex = "(linux |linux-lts|linux-zen)"
+critical_updates_regex = "(linux|linux-lts|linux-zen)"
 aur_command = "pikaur --query --sysupgrade --aur 2>/dev/null"
 # AUR only allows 4000 requests every 24 hours
 interval = 1800
-
-[[block]]
-block = "custom"
-command = "uptime --pretty | sed --regexp-extended 's/ week(s)?,/w/g; s/ day(s)?,/d/; s/ hour(s)?,/h/; s/ minute(s)?/m/'"
-interval = 600
-on_click = "true"
-
-[[block]]
-block = "music"
-player = "mpd"
-buttons = ["play"]
-marquee = false
-marquee_speed = 0.8
-marquee_interval = 3
-max_width = 25
 
 [[block]]
 block = "disk_space"
@@ -69,10 +50,10 @@ interval = 60
 
 [[block]]
 block = "net"
-device = "enp3s0"
+device = "wlan0"
 speed_min_unit = "M"
 speed_digits = 2
-#bitrate = true
+ssid = true
 
 # if have issues then disable this block until it has been cleared of unwraps
 # once https://github.com/greshake/i3status-rust/pull/533 is merged this should be easier to monitor
@@ -99,19 +80,19 @@ command = "fish --command='check_xclients --barmode'"
 interval = 5
 
 [[block]]
+block = "focused_window"
+
+[[block]]
 block = "ibus"
 [block.mappings]
 "mozc-jp" = "JP"
 "xkb:us::eng" = "EN"
 
 [[block]]
-block = "kdeconnect"
-device_id = "689ccf9fd6f3272d"
-
-[[block]]
-block = "weather"
-format = "{apparent}℃ {humidity}%"
-service = { name = "openweathermap", units = "metric" }
+block = "battery"
+driver = "sysfs"
+device = "CMB1"
+format = "{percentage}% {time}"
 
 [[block]]
 block = "time"
