sway: use mako over wob for OSD
Caveat: notification replacement is not yet implemented in mako

Revisit this if this is ever merged: https://github.com/emersion/mako/pull/270

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -5,9 +5,12 @@ default-timeout=3000
 border-radius=4
 layer=overlay
 
-[app-name=AN2Linux]
+[app-name=volumeOSD]
 text-color=#00bfff
 border-color=#00bfff
+border-radius=10
+max-visible=1
+default-timeout=1000
 
 [app-name=fish]
 ignore-timeout=1
