--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -1,7 +1,10 @@
 [icons]
 name = "awesome5"
 [icons.overrides]
+net_up = ""
+net_down = ""
 net_wired = ""
+volume_muted = " "
 volume_empty = " "
 volume_half = " "
 volume_full = " "
@@ -17,6 +20,8 @@ separator_bg = "auto"
 [[block]]
 block = "pacman"
 format = "{pacman}/{aur}"
+format_singular = "{pacman}/{aur}"
+format_up_to_date = "{pacman}/{aur}"
 critical_updates_regex = "(linux |linux-lts|linux-zen)"
 aur_command = "pikaur --query --sysupgrade --aur 2>/dev/null"
 # AUR only allows 4000 requests every 24 hours
@@ -30,12 +35,11 @@ on_click = "true"
 
 [[block]]
 block = "music"
-player = "mpd"
-buttons = ["play"]
-marquee = false
+buttons = ["play", "prev", "next"]
+marquee = true
 marquee_speed = 0.8
 marquee_interval = 3
-max_width = 25
+max_width = 15
 
 [[block]]
 block = "disk_space"
@@ -80,12 +84,15 @@ speed_digits = 2
 block = "sound"
 driver = "pulseaudio"
 step_width = 3
-on_click = "swaymsg exec 'pavucontrol'"
+max_vol = 99
+on_click = "fish --command='switchaudio --menu'"
+#on_click = "swaymsg exec 'pavucontrol'"
 #this crashes swaybar:
 #on_click = "pavucontrol 2>/dev/null"
 format = "{output_name} {volume}%"
 [block.mappings]
-"alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = ""
+"alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "U"
+"alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00145592-00.analog-stereo" = "D"
 "alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
 
 [[block]]
