fish/i3status-rust: add menu to list X11 clients

--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -110,6 +110,7 @@ command = "fish --command='check_kernel --barmode'"
 block = "custom"
 # Show number of X11 apps running
 command = "fish --command='check_xclients --barmode'"
+on_click = "fish --command='check_xclients --menu'"
 interval = 5
 
 [[block]]
