--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -96,6 +96,7 @@ on_click = "fish --command='switchaudio --menu'"
 #on_click = "swaymsg exec 'pavucontrol'"
 #this crashes swaybar:
 #on_click = "pavucontrol 2>/dev/null"
+show_volume_when_muted = true
 format = "{output_name} {volume}%"
 [block.mappings]
 "alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "U"
