pikaur: update config (including some autoadded by pikaur itself?)

--- a/pikaur/.config/pikaur.conf
+++ b/pikaur/.config/pikaur.conf
@@ -21,6 +21,9 @@ versiondiffnew = 9
 requireenterconfirm = yes
 printcommands = no
 reversesearchsorting = no
+aursearchsorting = hottest
+displaylastupdated = no
+groupbyrepository = yes
 
 [misc]
 pacmanpath = pacman
@@ -32,6 +35,8 @@ privilegeescalationtool = sudo
 socks5proxy = 
 aururl = https://aur.archlinux.org
 newsurl = https://www.archlinux.org/feeds/news/
+aurhttpproxy = 
+aurhttpsproxy = 
 
 [review]
 noedit = no
