--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -101,7 +101,9 @@ format = "{output_name} {volume}%"
 [block.mappings]
 "alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "U"
 "alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00145592-00.analog-stereo" = "D"
-"alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
+# before changing from pulseaudio to pipewire
+#"alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
+"alsa_output.pci-0000:00:1b.0.analog-stereo" = ""
 
 [[block]]
 block = "custom"
