--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -99,10 +99,11 @@ on_click = "fish --command='switchaudio --menu'"
 show_volume_when_muted = true
 format = "{output_name} {volume}%"
 [block.mappings]
+# pulseaudio
+"alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
 "alsa_output.usb-Harman_Multimedia_JBL_Pebbles_1.0.0-00.analog-stereo" = "U"
 "alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00145592-00.analog-stereo" = "D"
-# before changing from pulseaudio to pipewire
-#"alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
+# pipewire-pulse
 "alsa_output.pci-0000:00:1b.0.analog-stereo" = ""
 
 [[block]]
