systemd: update mpDris2 file for sway system

--- a/systemd/.config/systemd/user/mpDris2.service
+++ b/systemd/.config/systemd/user/mpDris2.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=mpDris2 daemon
 BindsTo=mpd.service
-After=mpd.service dunst.service
+After=mpd.service mako.service
 
 [Service]
 ExecStart=/usr/bin/mpDris2
