--- a/i3status-rs/.config/i3status-rust/config.toml
+++ b/i3status-rs/.config/i3status-rust/config.toml
@@ -4,10 +4,6 @@ name = "awesome5"
 net_up = ""
 net_down = ""
 net_wired = ""
-volume_muted = " "
-volume_empty = " "
-volume_half = " "
-volume_full = " "
 
 [theme]
 name = "slick"
@@ -83,7 +79,8 @@ on_click = "fish --command='switchaudio --menu'"
 #this crashes swaybar:
 #on_click = "pavucontrol 2>/dev/null"
 show_volume_when_muted = true
-format = "{output_name} {volume}%"
+format = "{output_name} {volume}"
+icons_format = " "
 [block.mappings]
 # pulseaudio
 "alsa_output.pci-0000_00_1b.0.analog-stereo" = ""
